[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/StateMachine/RockBossEnemy/RockBossStates/ChaseAttackState.gd" type="Script" id=1]

[node name="ChaseAttackState" type="Node"]
script = ExtResource( 1 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageTakenTimer" type="Timer" parent="."]

[node name="PatternCooldownTimer" type="Timer" parent="."]
one_shot = true
